Closed Bug 15720 Opened 26 years ago Closed 26 years ago

[DOGFOOD] [Regression] - can't retrieve mail under POP

Categories

(MailNews Core :: Backend, defect, P1)

PowerPC
Mac System 8.5
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: pmock, Assigned: bugzilla)

References

Details

(Whiteboard: [PDT+])

Build Date & Platform Bug Found: MacOS commercial seamonkey build 1999-10-06-08-m11 installed on G3/400 OS 8.5. Overview Description: In today commercial Mac build, I can not retrieve mail under POP. I tried to migrate my profile and create a new profile. No mail message appear in the inbox. I exit messenger and re-launched it just to be sure it wasn't a refresh problem. This problem does not occur on IMAP (yet you have to refresh the inbox folder before you see you new messages). Steps to Reproduce: 0) Create a pop profile under communicator 4.x 1) Double click on the icon 'mozilla installer" 2) Select your profile and click on the start button You will crash b/c of bug 15687. 3) Double click on 'mozilla messenger' icon 4) Messenger launches 5) Expand the list of pop folders, click on the '+' 6) Select the inbox 7) Click on the Get Msg button The status bar indicate that it is retrieving message 1 of xx 8) Exit Messenger and start Messenger again No messages are in the folder. Actual Results: No message appears to be downloaded. The status bar indicate that it is retrieving message 1 of xx but stops. I view my inbox file on the hard disk and it's empty. Expected Results: It should retrieve the new messages on the server Additional Builds and Platforms Tested On: This problem does not occur on win32 commercial build 1999-10-06-09-m11 or the win32 commercial build 1999-10-06-08-m11. Additional Information: This worked in yesterday commercial build.
This problem also occurs in today Mac mozilla build 1999-10-06-08-m11. In yesterday mozilla build, I could retrieve mail under pop.
Status: NEW → ASSIGNED
Target Milestone: M11
QA Contact: lchiang → esther
Perhaps this needs to be a blocker for M11 since this is such basic functionality that is no longer working. If so, then I'll let leaf know.
Severity: critical → blocker
Priority: P3 → P1
P1/blocker cc mscott.
Blocks: 14742
Whiteboard: I am working on it...
status whiteboard looks like traction. added self to cc
This looks like it should be assigned to me and not Jean-Francois as it's related to pop.
But in the same time is a Mac issue... I am still waiting on my build to complete and then we should work together to fix it quickly. I am tuning on my AIM.
Peter, can you attach a prefs file for the profile that isn't working? Also, can you try creating a new pop account (not migrating one) and seeing if you can download pop mail on that?
Hi Scott, I tried to create a new profile (no migration) but I'm seeing the same problem in today M11 Mac build 1999-10-07-08-m11 on both mozilla and commercial builds. I just emailed my prefs.js that was created under mozilla. Thanks for your help. -- # Mozilla User Preferences // This is a generated file! user_pref("mail.account.account1.identities", "id1"); user_pref("mail.account.account1.server", "server1"); user_pref("mail.account.account2.identities", "id2"); user_pref("mail.account.account2.server", "server2"); user_pref("mail.accountmanager.accounts", "account1,account2"); user_pref("mail.identity.id1.useremail", "mozProfile"); user_pref("mail.identity.id2.fullName", "3qatest05 account"); user_pref("mail.identity.id2.useremail", "3qatest05@netscape.com"); user_pref("mail.root.none", "AAAAAAD0AAIAAQlQb29oIEJlYXIAAAAAAAAAAAAAAAAAAAAAAACz85T7QkQAAAABuCUETWFpbAAAAAAA AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAG4KLQiP XcAAAAAAAAAAP//// 8AAAAAAAAAAAAAAAAAAAAAAAAACm1velByb2ZpbGUAAQAQAAG4JQABCRgAAPYWAAD2FQACADNQb29oIEJ lYXI6RG9jdW1lbnRzOk1vemlsbGE6VXNlcnM1MDptb3pQcm9maWxlOk1haWwA//8AAA=="); user_pref("mail.root.pop3", "AAAAAAD0AAIAAQlQb29oIEJlYXIAAAAAAAAAAAAAAAAAAAAAAACz85T7QkQAAAABuCUETWFpbAAAAAAA AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAG4KLQiP XcAAAAAAAAAAP//// 8AAAAAAAAAAAAAAAAAAAAAAAAACm1velByb2ZpbGUAAQAQAAG4JQABCRgAAPYWAAD2FQACADNQb29oIEJ lYXI6RG9jdW1lbnRzOk1vemlsbGE6VXNlcnM1MDptb3pQcm9maWxlOk1haWwA//8AAA=="); user_pref("mail.server.server1.directory", "AAAAAAD8AAIAAQlQb29oIEJlYXIAAAAAAAAAAAAAAAAAAAAAAACz85T7QkQAAAABuCgKTG9jYWwgTWFp bAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAG4LrQiP YEAAAAAAAAAAP//// 8AAAAAAAAAAAAAAAAAAAAAAAAABE1haWwAAQAUAAG4KAABuCUAAQkYAAD2FgAA9hUAAgA+ UG9vaCBCZWFyOkRvY3VtZW50czpNb3ppbGxhOlVzZXJzNTA6bW96UHJvZmlsZTpNYWlsOkxvY2FsIE1ha Wz//wAA"); user_pref("mail.server.server1.hostname", "Local Mail"); user_pref("mail.server.server1.name", "Local Mail"); user_pref("mail.server.server1.type", "none"); user_pref("mail.server.server1.userName", "nobody"); user_pref("mail.server.server2.directory", "AAAAAAD6AAIAAQlQb29oIEJlYXIAAAAAAAAAAAAAAAAAAAAAAACz85T7QkQAAAABuCgHc2VydmVyMgAA AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAG4NbQiP a0AAAAAAAAAAP//// 8AAAAAAAAAAAAAAAAAAAAAAAAABE1haWwAAQAUAAG4KAABuCUAAQkYAAD2FgAA9hUAAgA7UG9vaCBCZWF yOkRvY3VtZW50czpNb3ppbGxhOlVzZXJzNTA6bW96UHJvZmlsZTpNYWlsOnNlcnZlcjIA//8AAA=="); user_pref("mail.server.server2.hostname", "nsmail-2"); user_pref("mail.server.server2.name", "nsmail-2"); user_pref("mail.server.server2.type", "pop3"); user_pref("mail.server.server2.userName", "3qatest05"); user_pref("mail.smtpserver.smtp1.hostname", "nsmail-2"); user_pref("mail.smtpservers", "smtp1");
With a fresh debug build from this morning, I am able to reproduce the problem with my own prefs. test condition: Only one pop account configured. I have the inbox folder selected. So far what I have discoverd is: 1) When I click on Get Msg, I get the following assert message (I don't think so it's our problem here): Assertion: "QueryInterface needed" (query_result == mRawPtr) at file nsComPtr.h, line 487 the caller stack is: ... 03E505B4 PPC 15C7A394 nsMsgLocalMailFolder::GetNewMessages()+7A394 03E50524 PPC 15C8DFBC nsPop3Service::GetNewMail(nsIUrlListener*, nsIPop3IncomingServer*, nsIURI**)+ 8DFBC 03E504A4 PPC 15C8E888 nsPop3Service::RunPopUrl(nsIMsgIncomingServer*, nsIURI*)+8E888 03E50434 PPC 15C95064 nsPop3Protocol::LoadUrl(nsIURI*, nsISupports*)+95064 03E50344 PPC 15CB447C nsMsgProtocol::LoadUrl(nsIURI*, nsISupports*)+B447C 03E502B4 PPC 15535304 nsSocketTransport::AsyncRead(unsigned int, int, nsISupports*, nsIStreamListener*)+ 35304 03E50214 PPC 155244A8 NS_NewAsyncStreamListener(nsIStreamListener**, nsIEventQueue*, nsIStreamListener*)+244A8 03E50164 PPC 155241F4 NS_NewAsyncStreamObserver(nsIStreamObserver**, nsIEventQueue*, nsIStreamObserver*)+241F4 03E50104 PPC 15FBA804 nsDebug::Assertion(const char*, const char*, const char*, int)+00040 2) We start delivering the first message but we stop because m_pop3ConData->msg_closure isn't null at file nsPop2Protocol.cpp, line 2013 (function nsPop3Protocol::RetrResponse) Still investigating...
oops, ignore my statement #2. We start incorporate the message and then we block somewhere...
I wonder if it's not a regression from the fix for bug 15291 jefft did 2 days ago. I will backup his changes and see if it's better... Add jefft in cc list
Yes, backing up jefft's changes in nsProtocol.cpp & nsPop3Sink.cpp fix the problem. I don't know yet really why but we should have a byte count error somewhere. Linux should have the same problem, can somebody verify it? Thanks
I don't think we need anymore to keep the tree close for this bug.
I don't have a Mac at home. I'll look into it tomorrow. You can reassign the bug to me. Meanwhile I check with linux build.
Jean-Francois...good track down....can we look into backing out Jefft's changes tonight so this works for the macbuild tomorrow morning? Then he can take a look when he's in the office tomorrow?
Linux is fine. I have no problem getting new message. One thing I am puzzled is we were able to get new mail messages as of yesterday's build. There must be something else fishy.
Assignee: ducarroz → jefft
Status: ASSIGNED → NEW
No, I don't like the idea of backing out my changes. I'll come in and take a look. Reassign bug to myself.
Whiteboard: I am working on it...
I will do more investigation....
Jeff, you're right, if it works on Linux, therefore it should be something else!
OK, I THINK I GOT THE REAL SOLUTION As now we end line with only CR on Mac (that was the fix from jefft), we need to tell that to our input buffer: Index: nsPop3Protocol.cpp =================================================================== RCS file: /cvsroot/mozilla/mailnews/local/src/nsPop3Protocol.cpp,v retrieving revision 1.68 diff -r1.68 nsPop3Protocol.cpp 365a366 > SetLookingForCRLF(MSG_LINEBREAK_LEN == 2); Can somebody test it on Linux and Windows (my windows build is dead!). I neead also a code review, mscott or jefft?
Summary: [Regression] - can't retrieve mail under POP → [DOGFOOD] [Regression] - can't retrieve mail under POP
Sounds like a dogfood bug to me
Assignee: jefft → ducarroz
i think you are on the right track here. Linux works like a charm. Reassign bug back to you.
Blocks: 12176
Status: NEW → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Fixed and checked in.
Status: RESOLVED → VERIFIED
Verified as fixed using Mac mozilla and commerical build 1999-10-08-12-m11. I can receive mail under POP and IMAP.
Whiteboard: [PDT+]
Putting on [PDT]+ radar.
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.