Fix for bug 15720, We need to tell the nsMsgLineBuffer which format of line break we will use. R=jefft,mscott