mailnews/local/src/nsPop3Protocol.cpp
@@ -363,6 +363,7 @@ net_pop3_free_state(Pop3UidlHost* host)
 
 nsPop3Protocol::nsPop3Protocol(nsIURI* aURL) : nsMsgLineBuffer(NULL, PR_FALSE)
 {
+	SetLookingForCRLF(MSG_LINEBREAK_LEN == 2);
 	Initialize(aURL);
 }
 
